fix: subtitle style on mobile

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -556,7 +556,7 @@ li pre {
                 }
 
                 .post-teaser__subtitle {
-                    font-size: 12px;
+                    font-size: 14px;
                     @include centered-block();
                 }
 
